force-app/main/default/objects/Deposit__c/Deposit__c.object-meta.xml
<CustomObject>
    <label>Deposit</label>
    <nameField>
        <displayFormat>DS-{000000}</displayFormat>
        <label>DEPOSIT ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deposit</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>