force-app/main/default/objects/Deposit__c/fields/AmountPaidToVendor__c.field-meta.xml
<CustomField>
    <fullName>AmountPaidToVendor__c</fullName>
    <label>AMOUNT PAID TO VENDOR(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>