force-app/main/default/objects/Deposit__c/fields/AmountPaidToVendorLocal__c.field-meta.xml
<CustomField>
    <fullName>AmountPaidToVendorLocal__c</fullName>
    <label>AMOUNT PAID TO VENDOR(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>