force-app/main/default/objects/Deposit__c/fields/AmountReceivedFromCustomerLocal__c.field-meta.xml
<CustomField>
    <fullName>AmountReceivedFromCustomerLocal__c</fullName>
    <label>AMOUNT RECEIVED FROM CUSTOMER(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>