force-app/main/default/objects/Deposit__c/fields/AmountReceivedFromCustomerUSD__c.field-meta.xml
<CustomField>
    <fullName>AmountReceivedFromCustomerUSD__c</fullName>
    <label>AMOUNT RECEIVED FROM CUSTOMER(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>