force-app/main/default/objects/Deposit__c/fields/BalanceEndAmountUSD__c.field-meta.xml
<CustomField>
    <fullName>BalanceEndAmountUSD__c</fullName>
    <label>CLOSING BALANCE(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>