force-app/main/default/objects/Deposit__c/fields/BalanceStartAmountLocal__c.field-meta.xml
<CustomField>
    <fullName>BalanceStartAmountLocal__c</fullName>
    <label>BALANCE START AMOUNT(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>