force-app/main/default/objects/Deposit__c/fields/DepositBankTransferCode__c.field-meta.xml
<CustomField>
    <fullName>DepositBankTransferCode__c</fullName>
    <label>DEPOSIT BANK TRANSACTION CODE</label>
    <length>60</length>
    <type>Text</type>
</CustomField>