force-app/main/default/objects/Deposit__c/fields/DepositCollectFrom__c.field-meta.xml
<CustomField>
    <fullName>DepositCollectFrom__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DEPOSIT COLLECT FROM</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>DEPOSIT COLLECT FROM</relationshipLabel>
    <relationshipName>DEPOIST</relationshipName>
    <type>Lookup</type>
</CustomField>