force-app/main/default/objects/Deposit__c/fields/DepositInCreditInAccountingCode__c.field-meta.xml
<CustomField>
    <fullName>DepositInCreditInAccountingCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DEPOSIT-IN CREDIT ACCOUNTING CODE</label>
    <referenceTo>Accounting_Code__c</referenceTo>
    <relationshipLabel>DEPOSIT-IN (CREDIT ACCOUNTING CODE)</relationshipLabel>
    <relationshipName>DepositInBankAccount</relationshipName>
    <type>Lookup</type>
</CustomField>