force-app/main/default/objects/Deposit__c/fields/DepositINDebitAccountingCode__c.field-meta.xml
<CustomField>
    <fullName>DepositINDebitAccountingCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DEPOSIT-IN DEBIT ACCOUNTING CODE</label>
    <referenceTo>Accounting_Code__c</referenceTo>
    <relationshipLabel>DEPOSIT-IN (DEBIT ACCOUNTING CODE)</relationshipLabel>
    <relationshipName>DepositInDebitAccountingCode</relationshipName>
    <type>Lookup</type>
</CustomField>