force-app/main/default/objects/Deposit__c/fields/DepositName__c.field-meta.xml
<CustomField>
    <fullName>DepositName__c</fullName>
    <label>DEPOSIT NAME</label>
    <length>100</length>
    <type>Text</type>
</CustomField>