force-app/main/default/objects/Deposit__c/fields/DepositPaymentTo__c.field-meta.xml
<CustomField>
    <fullName>DepositPaymentTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DEPOSIT PAYMENT TO</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>DEPOSIT PAYMENT TO</relationshipLabel>
    <relationshipName>DepositPaymentTo</relationshipName>
    <type>Lookup</type>
</CustomField>