force-app/main/default/objects/Deposit__c/fields/PreviousDepositID__c.field-meta.xml
<CustomField>
    <fullName>PreviousDepositID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PREVIOUS DEPOSIT ID</label>
    <referenceTo>Deposit__c</referenceTo>
    <relationshipLabel>NEXT DEPOSIT</relationshipLabel>
    <relationshipName>PreviousDeposit</relationshipName>
    <type>Lookup</type>
</CustomField>