force-app/main/default/objects/Deposit__c/fields/ReceiptanceSettledDate__c.field-meta.xml
<CustomField>
    <fullName>ReceiptanceSettledDate__c</fullName>
    <label>RECEIPTANCE SETTLED DATE-SELLING</label>
    <type>Date</type>
</CustomField>