force-app/main/default/objects/Deposit__c/fields/RollUpBalanceAfterOffsetUSD__c.field-meta.xml
<CustomField>
    <fullName>RollUpBalanceAfterOffsetUSD__c</fullName>
    <label>ROLL-UP BALANCE AFTER OFFSET(USD)</label>
    <summarizedField>DepositOffset__c.ClosingBalanceUSD__c</summarizedField>
    <summaryForeignKey>DepositOffset__c.DepositID__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>