force-app/main/default/objects/Deposit__c/fields/RollUpDepositOffsetAmountUSD__c.field-meta.xml
<CustomField>
    <fullName>RollUpDepositOffsetAmountUSD__c</fullName>
    <label>ROLL-UP DEPOSIT OFFSET AMOUNT(USD)</label>
    <summarizedField>DepositOffset__c.DepositOffsetAmountUSD__c</summarizedField>
    <summaryForeignKey>DepositOffset__c.DepositID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>