force-app/main/default/objects/Deposit__c/fields/TotalAmountOfDepositFromCustomer__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountOfDepositFromCustomer__c</fullName>
    <label>TOTAL AMOUNT OF DEPOSIT FROM CUSTOMER</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>