force-app/main/default/objects/Deposit__c/fields/TotalAmountOfDepositFromCustomerUSD__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountOfDepositFromCustomerUSD__c</fullName>
    <label>TOTAL AMOUNT OF DEPOSIT INBOUND(USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>