force-app/main/default/objects/Deposit__c/fields/TotalAmountOfDepositToVendor__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountOfDepositToVendor__c</fullName>
    <label>TOTAL AMOUNT OF DEPOSIT TO VENDOR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>