force-app/main/default/objects/Deposit__c/fields/TotalAmountOfDepositToVendorUSD__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountOfDepositToVendorUSD__c</fullName>
    <label>TOTAL AMOUNT OF DEPOSIT OUTBOUND(USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>