force-app/main/default/objects/Deposit__c/recordTypes/DepositFromCustomerLocalCurrency.recordType-meta.xml
<RecordType>
    <fullName>DepositFromCustomerLocalCurrency</fullName>
    <active>true</active>
    <description>To manage deposit inbound in local currency</description>
    <label>Deposit from Customer-Local Currency</label>
</RecordType>