force-app/main/default/objects/Deposit__c/recordTypes/DepositFromCustomerUSDCurrency.recordType-meta.xml
<RecordType>
    <fullName>DepositFromCustomerUSDCurrency</fullName>
    <active>true</active>
    <description>To manage deposit inbound in USD currency</description>
    <label>Deposit from Customer-USD Currency</label>
</RecordType>