force-app/main/default/objects/Deposit__c/recordTypes/DepositTo3rdPartyLocalCurrency.recordType-meta.xml
<RecordType>
    <fullName>DepositTo3rdPartyLocalCurrency</fullName>
    <active>true</active>
    <description>To manage deposit outbound in local currency</description>
    <label>Deposit To 3rd Party-Local currency</label>
</RecordType>