force-app/main/default/objects/Deposit__c/recordTypes/DepositTo3rdPartyUSDCurrency.recordType-meta.xml
<RecordType>
    <fullName>DepositTo3rdPartyUSDCurrency</fullName>
    <active>true</active>
    <description>To manage deposit outbound in USD currency</description>
    <label>Deposit To 3rd Party-USD currency</label>
</RecordType>