force-app/main/default/objects/Deposit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>DepositName__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>DepositCollectFrom__c</columns>
    <columns>BalanceStartAmountLocal__c</columns>
    <columns>AmountReceivedFromCustomerLocal__c</columns>
    <columns>AmountReceivedFromCustomerUSD__c</columns>
    <columns>BalanceEndAmountLocal__c</columns>
    <columns>BankAccountForReceiving__c</columns>
    <columns>ReceiptanceSettledDate__c</columns>
    <columns>ReceiptanceTypeSelling__c</columns>
    <columns>ReceiptanceNotes__c</columns>
    <columns>DepositINDebitAccountingCode__c</columns>
    <columns>DepositInCreditInAccountingCode__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>